# NWDAF-Anomaly-Detection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  amari_ue_eda_app.py  client.py  demo.py  docker-compose.yaml  eda_app.py  enb_counters_eda_app.py  main.py  membership_inference_attacks.py  mlflow.db  playground.py  pyproject.toml  requirements.txt  run_tests.py  server.py  setup.py
alert_filter_models/: alert_filter_example.pt
config/: __init__.py  data_config.py  hparams_config.py  other_configs.py
dataloader/: dataloader.py
demo/: Dockerfile.anonymization  Dockerfile.anonymizer  Dockerfile.detector  Dockerfile.monitor  Dockerfile.producer  README.md  anonymization_pipeline.py  anonymizer.py  detector.py  docker-compose.yml  model_adapter.py  monitor.py  nwdaf_data_producer.py  producer.py  xai_component.py
demo/xai_privateer-dev/: docker-compose.yml  readme.md
docs/: Makefile  alert_filter.md
docs/docs-site/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  privateer_ad.architectures.html  privateer_ad.architectures.layers.html  privateer_ad.architectures.layers.positional_encoding.html  privateer_ad.architectures.transformer_ad.html  privateer_ad.config.html  privateer_ad.config.metadata.html  privateer_ad.config.settings.html  privateer_ad.etl.download.html  privateer_ad.etl.html  privateer_ad.etl.transform.html  privateer_ad.etl.utils.html  privateer_ad.evaluate.evaluator.html  privateer_ad.evaluate.html  privateer_ad.fl.client.html  privateer_ad.fl.html  privateer_ad.fl.server.html  privateer_ad.fl.strategy.html  privateer_ad.fl.utils.html  privateer_ad.html  privateer_ad.predict.html  privateer_ad.predict.predict.html  privateer_ad.train.autotune.html  privateer_ad.train.autotuner.html  privateer_ad.train.html  privateer_ad.train.train.html  privateer_ad.train.trainer.html  privateer_ad.utils.html  privateer_ad.visualizations.device_info.html  privateer_ad.visualizations.html  privateer_ad.visualizations.plotter.html  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  privateer_ad.config.settings.rst  privateer_ad.etl.rst  privateer_ad.etl.transform.rst  privateer_ad.evaluate.evaluator.rst  privateer_ad.fl.strategy.rst  privateer_ad.fl.utils.rst  privateer_ad.predict.rst  privateer_ad.rst  privateer_ad.train.autotuner.rst  privateer_ad.train.rst  privateer_ad.utils.rst
evaluation/: evaluation.py
examples/: alert_filter_workflow.py
experiments/20250310-143759/: model.pt  model_summary.txt
experiments/20250312-180942/: model.pt  model_summary.txt
experiments/20250429-131301/: model.pt  model_summary.txt
experiments/20250505-100104/: model.pt
feedback_data/: feedback.json
hitlad-demo/alert_filter_demo/: README.md  alert_filter_demo.py  config.yaml  interactive_demo.py  run_demo.sh  setup_demo.py
hitlad_demo/: README.md  alert_filter_demo.py  config.yaml
hitlad_demo/alert_filter_demo/: alert_filter_demo.py  config.yaml  requirements.txt
hitlad_demo/feedback/: feedback.json
hitlad_demo/models/: alert_filter_model.pt
hitlad_demo/ui/: README.md  app.py  requirements.txt  run_ui.sh
models/: rae.py  vrae.py
notebooks/: AMARI_UE Tabular Data Extraction & Labeling.ipynb  Data Preprocessing.ipynb  ENB_COUNTERS Tabular Data Extraction & Labeling.ipynb  Experiments Evaluation.ipynb  Experiments Run.ipynb  FL simulation.ipynb  Standalone Experiment.ipynb  Tabular Data Extraction & Labeling.ipynb  Time Series Statistical Analysis.ipynb
nwdaf_anomaly_detection/dataloader/: dataloader.py
nwdaf_anomaly_detection/models/: vrae.py
nwdaf_anomaly_detection/training/: training.py
nwdaf_anomaly_detection/utils/: utils.py
nwdaf_anomaly_detection/visualizations/: visualizations.py
privateer-ad/: pyproject.toml
privateer-ad/privateer_ad/: __init__.py  client_app.py  server_app.py
privateer_ad/: __init__.py  client_app.py  save_model.py  server_app.py  utils.py
privateer_ad/architectures/: __init__.py  transformer_ad.py
privateer_ad/config/: .env.example  __init__.py  data_config.py  hparams_config.py  metadata.py  metadata.yaml  other_configs.py  settings.py  utils.py
privateer_ad/data_utils/: download.py  extract.py  transform.py  utils.py
privateer_ad/demo/: Dockerfile.analytics_agent  Dockerfile.fpga-manager  Dockerfile.nwdaf-producer  Dockerfile.xai  anonymization_pipeline.py  config.json  docker-compose.yml  fpga_acceleration_manager.py  misp_client.py  model_adapter.py  nwdaf_data_producer.py  security_analytics_agent.py  xai_component.py
privateer_ad/etl/: __init__.py  download.py  transform.py  utils.py
privateer_ad/evaluate/: __init__.py  evaluate.py  evaluator.py
privateer_ad/fl/: client.py  client_app.py  server.py  server_app.py  strategy.py  utils.py
privateer_ad/models/: __init__.py  alert_filter.py  alert_filter_autoencoder.py  attention_ae.py  transformer_ad.py
privateer_ad/predict/: __init__.py  predict.py
privateer_ad/train/: __init__.py  autotune.py  autotuner.py  train.py  trainer.py
privateer_ad/train_alert_feedback/: alert_filter_trainer.py  feedback_collector.py  train_alert_filter.py
privateer_ad/train_alert_filter/: __init__.py  alert_filter_ae_trainer.py  alert_filter_trainer.py  feedback_collector.py  train_alert_filter.py
results/: dp_level_0.0_max_grad_norm_100_target_epsilon_10_scores.txt  dp_level_0.0_max_grad_norm_1_target_epsilon_10_scores.txt  dp_level_0.0_max_grad_norm_2.5_target_epsilon_10_scores.txt  dp_level_0.0_max_grad_norm_5_target_epsilon_10_scores.txt  dp_level_0.5_max_grad_norm_100_target_epsilon_10_scores.txt  dp_level_0.5_max_grad_norm_1_target_epsilon_10_scores.txt  dp_level_0.5_max_grad_norm_2.5_target_epsilon_10_scores.txt  dp_level_0.5_max_grad_norm_5_target_epsilon_10_scores.txt  experiments_metadata.json
scalers/: dl_bitrate.pkl  dl_retx.pkl  dl_tx.pkl  pca.pkl  scaler.pkl  turbo_decoder_avg.pkl  ul_bitrate.pkl  ul_mcs.pkl  ul_retx.pkl  ul_tx.pkl
src/: autotune.py  evaluate.py  train.py  utils.py
src/architectures/: __init__.py  (+2 more)
tests/: test_alert_filter.py
utils/: utils.py
visualizations/: visualizations.py
(+1430 files in other folders)
