[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privateer_ad"
version = "0.1.0"
description = "Anomaly Detection with Differential Privacy"
authors = [
    {name = "Giorgos Livanos", email = "livanos.g@gmail.com"}
]
license = "Apache-2.0"
dependencies = [
    "hatchling==1.27.0",
    "fire==0.7.0",
    "mlflow==2.22.0",
    "optuna==4.3.0",
    "torch==2.7.0",
    "pytorch-forecasting==1.3.0",
    "pandas==2.2.3",
    "opacus==1.5.4",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "torchinfo==1.8.0",
    "tqdm==4.67.1",
    "requests==2.32.3",
    "PyYAML==6.0.2",
    "python-dotenv==1.1.0",
    "plotly==6.1.2",
    "matplotlib==3.10.3",
    "dash==3.0.4",
    "dash_bootstrap_components==2.0.3",
    "flwr[simulation]==1.18.0",
    "flwr-datasets==0.5.0",
    "datasets==3.1.0",
    "numpy==2.2.6",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "joblib==1.5.1",
    "kafka-python==2.2.10"
]

[project.scripts]
train-ad = "privateer_ad.train.train:main"
eval-ad = "privateer_ad.evaluate.evaluate:main"
predict-ad = "privateer_ad.predict.predict:main"
autotune-ad = "privateer_ad.train.autotune:main"
server-app = "privateer_ad.fl.server:app"
client-app = "privateer_ad.fl.client:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.flwr.app]
publisher = "WP3"

[tool.flwr.app.components]
serverapp = "privateer_ad.fl.server:app"
clientapp = "privateer_ad.fl.client:app"

[tool.flwr.app.config]  # Run Config
n-clients=3
epochs = 1
partition = true

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 8 # Each ClientApp will get assigned n CPU core
options.backend.client-resources.num-gpus = 0.33 # Each ClientApp will get n * 100% of each available GPU VRAM
options.backend.init_args.num_cpus = 24 # Only expose N CPU to the simulation
options.backend.init_args.num_gpus = 1 # Expose N GPUs to the simulation
options.backend.max_restarts = 2
options.backend.max_task_retries = 2
options.backend.memory_usage_threshold=0.33

[tool.flwr.federations.local-deployment]
address = "localhost:9093"
insecure = true
